--- a/Tracker.html
+++ b/Tracker.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<tracker.html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -470,4 +470,5 @@
     init();
 </script>
 </body>
+
 </html>
