Update and rename Tracker.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<index.html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -472,5 +472,6 @@
 </body>
 
 </html>
+
 
 
